# ObjViewer_v2.0

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mk  README.md  resources.qrc
docs/: manual.texi
obj_viewer/: main.cc
obj_viewer/lib/data_parser/: data_parser.h
obj_viewer/lib/mesh_maker/: mesh_maker.cc  mesh_maker.h
obj_viewer/types/: data_types.h
obj_viewer/util/: gif_maker.cc  gif_maker.h
obj_viewer/viewer/: loader.cc  loader.h  viewer.cc  viewer.h  viewer.ui
objviewer/lib/data_parser/: data_parser.cc  data_parser.h
objviewer/lib/mesh_maker/: mesh_maker.cc  mesh_maker.h
objviewer/types/: data_types.h
objviewer/util/: gif_maker.h
objviewer/viewer/: loader.cc  loader.h  viewer.cc  viewer.h  viewer.ui
resources/: resources.qrc
shaders/: fragment.frag  solid.frag  solid.vert  solid_flat.frag  texture.frag  texture.vert  texture_flat.frag  texture_no_normals.frag  texture_no_normals.vert  vertex.vert  wireframe.frag  wireframe.vert  wireframe_dashed.frag  wireframe_dashed.vert
shaders/macos/: solid.frag  solid.vert  solid_flat.frag  texture.frag  texture.vert  texture_flat.frag  texture_no_normals.frag  texture_no_normals.vert  wireframe.frag  wireframe_dashed.frag  wireframe_dashed.vert
src/: main.cc
src/base/: data_parser.cc  data_parser.h  data_types.h  gif_settings.h  mesh_maker.cc  mesh_maker.h
src/concurrency/: gif_maker.cc  gif_maker.h  gif_thread.cc  gif_thread.h
src/controller/: camera_controller.cc  camera_controller.h  controller.cc  controller.h  mesh_controller.cc  mesh_controller.h
src/libgif/: gif_maker.cc  gif_maker.h
src/libobj/: Makefile  a.out  earcut.h  obj_data.cc  obj_data.h  obj_loader.cc  obj_loader.h  obj_mesh.cc  obj_mesh.h  obj_test.c
src/loader/: loader.cc  loader.h
src/model/: CMakeLists.txt  camera_model.cc  camera_model.h  data.cc  data.h  data_parser.cc  data_parser.h  mesh.cc  mesh.h  mesh_maker.cc  mesh_maker.h  mesh_model.cc  mesh_model.h  model.cc  model.h  model_test.cc
src/types/: data_types.h  gif_settings.h
src/util/: gif_maker.cc  gif_maker.h
src/view/: loader.cc  loader.h  view.cc  view.h  view.ui  viewer.cc  viewer.h  viewer.ui
src/viewer/: loader.cc  loader.h  viewer.cc  viewer.h  viewer.ui
